--- a/email-signature.html
+++ b/email-signature.html
@@ -127,7 +127,7 @@
 
 <body>
     <div class="signature-container">
-        <img src="assets/display-picture.svg" alt="Nouvelle L. Gonzalo" class="profile-image">
+        <img src="https://i.ibb.co/qFYY03tZ/display-picture.jpg" alt="Nouvelle L. Gonzalo" class="profile-image">
         <div class="content-container">
             <div class="name">Nouvelle L. Gonzalo, Esq.</div>
             <div class="title">Founder and Managing Attorney</div>
@@ -135,60 +135,60 @@
 
             <div class="locations">
                 <a href="https://g.co/kgs/vgDUcPe" class="location-item">
-                    <img src="assets/pin-icon.svg" alt="Location">
+                    <img src="https://i.ibb.co/0jkqzSsr/pin-icon.jpg" alt="Location">
                     Miami
                 </a>
                 <span class="divider">|</span>
                 <a href="https://g.co/kgs/S851p8W" class="location-item">
-                    <img src="assets/pin-icon.svg" alt="Location">
+                    <img src="https://i.ibb.co/0jkqzSsr/pin-icon.jpg" alt="Location">
                     New York
                 </a>
                 <span class="divider">|</span>
                 <a href="https://g.co/kgs/jTj2vhc" class="location-item">
-                    <img src="assets/pin-icon.svg" alt="Location">
+                    <img src="https://i.ibb.co/0jkqzSsr/pin-icon.jpg" alt="Location">
                     Cleveland
                 </a>
                 <span class="divider">|</span>
                 <a href="https://g.co/kgs/a2TwkR7" class="location-item">
-                    <img src="assets/pin-icon.svg" alt="Location">
+                    <img src="https://i.ibb.co/0jkqzSsr/pin-icon.jpg" alt="Location">
                     Gainesville
                 </a>
             </div>
 
             <div class="social-badges">
                 <div class="badge">
-                    <img src="assets/award-icon.svg" alt="Super Lawyers">
+                    <img src="https://i.ibb.co/sJWtMpRw/award-icon.jpg" alt="Super Lawyers">
                     <span>Super Lawyers Selectee</span>
                 </div>
                 <div class="badge">
-                    <img src="assets/play-icon.svg" alt="Bloomberg">
+                    <img src="https://i.ibb.co/3m8LqhZN/play-icon.jpg" alt="Bloomberg">
                     <span>As seen on Bloomberg</span>
                 </div>
             </div>
 
             <div class="social-icons">
                 <a href="https://gonzalolaw.com/" target="_blank">
-                    <img src="assets/globe-icon.svg" alt="Website">
+                    <img src="https://i.ibb.co/k2tW6Q3K/globe-icon.jpg" alt="Website">
                 </a>
                 <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank">
-                    <img src="assets/linkedin-icon.svg" alt="LinkedIn">
+                    <img src="https://i.ibb.co/4RwL7Dtp/linkedin-icon.jpg" alt="LinkedIn">
                 </a>
                 <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank">
-                    <img src="assets/insta-icon.svg" alt="Instagram">
+                    <img src="https://i.ibb.co/XfsmmcN5/insta-icon.jpg" alt="Instagram">
                 </a>
                 <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation=1" target="_blank">
-                    <img src="assets/youtube-icon.svg" alt="YouTube">
+                    <img src="https://i.ibb.co/qYhdqBs1/youtube-icon.jpg" alt="YouTube">
                 </a>
                 <a href="tel:1-855-466-9256" target="_blank">
-                    <img src="assets/phone-icon.svg" alt="Phone">
+                    <img src="https://i.ibb.co/356yBq0D/phone-icon.jpg" alt="Phone">
                 </a>
                 <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank">
-                    <img src="assets/email-icon.svg" alt="Email">
+                    <img src="https://i.ibb.co/MvsWmCm/email-icon.jpg" alt="Email">
                 </a>
             </div>
 
             <div class="disclaimer">
-                <img src="assets/info-icon.svg" alt="Info"
+                <img src="https://i.ibb.co/0jdT5NFD/info-icon.jpg" alt="Info"
                     style="width: 12px; height: 12px; vertical-align: middle; margin-right: 4px;">
                 The contents of this email and any attachments are confidential. They are intended for the named
                 recipient(s) only.
@@ -203,37 +203,15 @@
 </html>
 
 <!-- 
-display picture
-https://drive.google.com/file/d/1Y9zb85I6TFtkrzfVC-ibhmZ9IECqQrv8/view?usp=sharing
-
-Play Icon
-https://drive.google.com/file/d/1Ji_a2jnDma2AgA7wo4CC1UUWxbAP9_Jh/view?usp=drive_link
-
-Award Icon
-https://drive.google.com/file/d/1zFoBClx4KKJ4kIcggxre3RaAVqsAI2Bl/view?usp=drive_link
-
-PIn Icon
-https://drive.google.com/file/d/1DqX1G43hPCQJFRt9TSEIFSTbxh7RWxrZ/view?usp=drive_link
-
-LinkedIn Icon
-https://drive.google.com/file/d/1_gofyPPBcY0XLiVAvrP_bpDEmt0X-pvN/view?usp=sharing
-
-Youtube Icon
-https://drive.google.com/file/d/1ZO6mnbpev0j_XRIqHBDHJGhHD7a2M_Kl/view?usp=drive_link
-
-Info Icon
-https://drive.google.com/file/d/1SoUuhGmuWzHGbzTlGKG5tCZvigGmpxSx/view?usp=drive_link
-
-Phone Icon
-https://drive.google.com/file/d/1QMc912e2gtaNyXiXsC_OFZDU-O1I1dVQ/view?usp=drive_link
-
-Email Icon
-https://drive.google.com/file/d/14T7QXa1Ze1ovyxoU_gp1I1oqVqP3n6M1/view?usp=drive_link
-
-Insta Icon
-https://drive.google.com/file/d/13eE9_UibkgsxrMoPaixO3D5sBsgc6mrw/view?usp=drive_link
-
-Globe Icon
-https://drive.google.com/file/d/13OpYPXwu4sh7Kp9uogoF7n75e1wHxAyQ/view?usp=drive_link
-
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/qYhdqBs1/youtube-icon.jpg" alt="youtube-icon" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/3m8LqhZN/play-icon.jpg" alt="play-icon" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/0jkqzSsr/pin-icon.jpg" alt="pin-icon" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/356yBq0D/phone-icon.jpg" alt="phone-icon" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/4RwL7Dtp/linkedin-icon.jpg" alt="linkedin-icon" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/XfsmmcN5/insta-icon.jpg" alt="insta-icon" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/0jdT5NFD/info-icon.jpg" alt="info-icon" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/k2tW6Q3K/globe-icon.jpg" alt="globe-icon" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/MvsWmCm/email-icon.jpg" alt="email-icon" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/qFYY03tZ/display-picture.jpg" alt="display-picture" border="0"></a>
+<a href="https://imgbb.com/"><img src="https://i.ibb.co/sJWtMpRw/award-icon.jpg" alt="award-icon" border="0"></a>
 -->
